--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,41 @@
+/* @import-normalize;
+
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
+
+/* base styles */
+/* {
+  margin: 0;
+  font-family: "Quicksand";
+  color: #333;
+}
+.app {
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  max-width: 600px;
+  margin: 0 auto;
+  border-bottom: 1px solid #f2f2f2;
+}
+.app h1 {
+  color: #f1356d;
+}
+.app .links {
+  margin-left: auto;
+}
+.app a {
+  margin-left: 16px;
+  text-decoration: none;
+  padding: 6px;
+}
+.app a:hover {
+  color: #f1356d;
+}
+.content {
+  max-width: 600px;
+  margin: 40px auto;
+  padding: 20px;
+} */ 
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
